bugfix: otp-1431: fix qc state warning on alignment overview page
the state warning were handled like passed, not like blocked.

--- a/grails-app/assets/stylesheets/otp.less
+++ b/grails-app/assets/stylesheets/otp.less
@@ -87,7 +87,7 @@ input, select, textarea, option, button {
     .ACCEPTED {
         color:#006400;
     }
-    .BLOCKED {
+    .BLOCKED, .WARNING {
         color:#e67300;
     }
     .REJECTED {
